--- a/autocomplete/src/autocomplete.css
+++ b/autocomplete/src/autocomplete.css
@@ -3,10 +3,16 @@
     border-top: none;
     overflow: hidden;
 
+    overflow-y: auto;
+
     margin: 0;
     padding: 0;
 
     flex-direction: column;
+
+    max-height: 300px;
+
+    z-index: 9999;
 }
 
 .ui-autocomplete-menu .ui-menu-item {
@@ -36,4 +42,54 @@
 ui-autocomplete input {
     border: 1px solid black;
     padding: 0.5rem;
+}
+
+ui-autocomplete.form-control {
+    display: unset;
+    padding: unset;
+    border:unset;
+}
+
+ui-autocomplete.form-control input {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.form-control.ui-autocomplete-menu {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: .25rem;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.form-control.ui-autocomplete-menu .ui-menu-item.focus {
+    background-color: #f1f3f5;
+}
+
+.input-group ui-autocomplete.form-control input {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
