--- a/autocomplete/autocomplete.css
+++ b/autocomplete/autocomplete.css
@@ -8,11 +8,20 @@
     margin: 0;
     padding: 0;
 
-    flex-direction: column;
-
     max-height: 300px;
 
-    z-index: 9999;
+    z-index: 100;
+}
+
+.ui-autocomplete-menu .ui-autocomplete-inner {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+ul.ui-autocomplete-inner {
+    padding-left: 0px;
+    margin-bottom: 0px;
 }
 
 .ui-autocomplete-menu .ui-menu-item {
@@ -34,9 +43,8 @@
     padding-left: 0.5rem;
 }
 
-.ui-autocomplete-menu .ui-menu-item:focus,
 .ui-autocomplete-menu .ui-menu-item.focus {
-    background-color: gray;
+    background-color: #f1f3f5;
 }
 
 ui-autocomplete input {
@@ -52,6 +60,7 @@ ui-autocomplete.form-control {
 
 ui-autocomplete.form-control input {
     display: block;
+    position: relative;
     width: 100%;
     padding: .375rem .75rem;
     font-size: 1rem;
@@ -66,9 +75,10 @@ ui-autocomplete.form-control input {
     appearance: none;
     border-radius: .25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    z-index: 101;
 }
 
-.form-control.ui-autocomplete-menu {
+ui-autocomplete.form-control .ui-autocomplete-menu {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -85,7 +95,7 @@ ui-autocomplete.form-control input {
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
-.form-control.ui-autocomplete-menu .ui-menu-item.focus {
+ui-autocomplete.form-control .ui-autocomplete-menu .ui-menu-item.focus {
     background-color: #f1f3f5;
 }
 
